# makoto

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f356930f4fe9_initial_schema_with_food_id_fk.py
scripts/: migrate_jsonl_to_sqlite.py  migrate_to_food_id.py
src/makoto/: __init__.py  main.py
src/makoto/client/: api.py  config.py
src/makoto/commands/: body.py  circumference.py  dashboard.py  diet.py  exercise.py  food.py  profile.py
src/makoto/models/: profile.py  records.py
src/makoto/server/: app.py  auth.py  database.py  db_models.py  keep_client.py  models.py
src/makoto/server/routes/: body.py  circumference.py  dashboard.py  diet.py  exercise.py  foods.py  keep.py  profile.py
src/makoto/utils/: console.py  data_paths.py  jsonl_store.py  profile_store.py  search.py  timeseries.py  tz.py
tests/: __init__.py  conftest.py  test_body.py  test_circumference.py  test_dashboard.py  test_diet.py  test_exercise.py  test_foods.py  test_keep.py  test_main.py  test_profile.py
web/: index.html  package-lock.json  package.json
web/src/: main.ts
web/src/api/: body.ts  circumference.ts  client.ts  dashboard.ts  diet.ts  exercise.ts  foods.ts  keep.ts  profile.ts
web/src/components/: BodyCompChart.vue  BodyFatTrendChart.vue  CalorieDeficitChart.vue  CircumferenceChart.vue  FitnessChart.vue  IntakeTdeeChart.vue  KeepStatus.vue  RawWeightChart.vue  TodayOverview.vue  WeeklyLoadChart.vue  WeeklyLossChart.vue  WeightFfmChart.vue  WeightTrendChart.vue
web/src/composables/: useCopyChartMd.ts  useEChartsResize.ts  useTheme.ts
web/src/layouts/: MainLayout.vue
web/src/router/: index.ts
web/src/styles/: global.css
web/src/views/: BodyLogsView.vue  CircumferenceLogsView.vue  DashboardView.vue  DietLogsView.vue  ExerciseLogsView.vue  FoodsView.vue  LoginView.vue  ProfileView.vue
