[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makoto"
version = "0.1.0"
description = "CLI 健身助手 — 记录身体数据、饮食与运动，生成统计数据"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "naer-lily" }]
keywords = ["fitness", "cli", "health", "tracking"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.0",
    "ruff>=0.15.0",
    "mypy>=1.9.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
makoto = "makoto.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/makoto"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "TID", # tidy imports
]
ignore = ["RUF001"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
